force-app/main/default/objects/Warranty_Claim__c/fields/Asset__c.field-meta.xml
<CustomField>
<fullName>Asset__c</fullName>
<deleteConstraint>Restrict</deleteConstraint>
<label>Asset</label>
<referenceTo>Asset</referenceTo>
<relationshipLabel>Warranty Claims</relationshipLabel>
<required>true</required>
<relationshipName>Warranty_Claims</relationshipName>
<type>Lookup</type>
</CustomField>