force-app/main/default/objects/Warranty_Claim__c/fields/Claim_Reason__c.field-meta.xml
<CustomField>
<fullName>Claim_Reason__c</fullName>
<label>Claim Reason</label>
<required>true</required>
<type>Picklist</type>
<valueSet>
<restricted>true</restricted>
<valueSetDefinition>
<value><fullName>Manufacturing Defect</fullName><default>false</default><label>Manufacturing Defect</label></value>
<value><fullName>Accidental Damage</fullName><default>false</default><label>Accidental Damage</label></value>
<value><fullName>Not Working</fullName><default>false</default><label>Not Working</label></value>
<value><fullName>Missing Parts</fullName><default>false</default><label>Missing Parts</label></value>
<value><fullName>Other</fullName><default>false</default><label>Other</label></value>
</valueSetDefinition>
</valueSet>
</CustomField>