force-app/main/default/objects/Warranty_Claim__c/fields/Contact__c.field-meta.xml
<CustomField>
<fullName>Contact__c</fullName>
<deleteConstraint>Restrict</deleteConstraint>
<label>Contact</label>
<referenceTo>Contact</referenceTo>
<relationshipLabel>Warranty Claims</relationshipLabel>
<required>true</required>
<relationshipName>Warranty_Claims</relationshipName>
<type>Lookup</type>
</CustomField>