force-app/main/default/objects/Warranty_Claim__c/fields/Date_Filed__c.field-meta.xml
<CustomField>
<fullName>Date_Filed__c</fullName>
<label>Date Filed</label>
<required>true</required>
<type>Date</type>
<defaultValue>TODAY()</defaultValue>
</CustomField>