force-app/main/default/objects/Warranty_Claim__c/fields/Related_Case__c.field-meta.xml
<CustomField>
<fullName>Related_Case__c</fullName>
<deleteConstraint>SetNull</deleteConstraint>
<label>Related Case</label>
<referenceTo>Case</referenceTo>
<relationshipLabel>Warranty Claims</relationshipLabel>
<relationshipName>Warranty_Claims</relationshipName>
<type>Lookup</type>
</CustomField>