force-app/main/default/objects/Warranty_Claim__c/fields/Resolution_Notes__c.field-meta.xml
<CustomField>
<fullName>Resolution_Notes__c</fullName>
<label>Resolution Notes</label>
<length>32768</length>
<type>LongTextArea</type>
</CustomField>