force-app/main/default/objects/Warranty_Claim__c/fields/Status__c.field-meta.xml
<CustomField>
<fullName>Status__c</fullName>
<label>Status</label>
<required>true</required>
<type>Picklist</type>
<valueSet>
<restricted>true</restricted>
<valueSetDefinition>
<value><fullName>New</fullName><default>true</default><label>New</label></value>
<value><fullName>Under Review</fullName><default>false</default><label>Under Review</label></value>
<value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
<value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
<value><fullName>Escalated</fullName><default>false</default><label>Escalated</label></value>
<value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
</valueSetDefinition>
</valueSet>
</CustomField>